# luizalabs_tutorial

./: README.md  pyproject.toml
.github/workflows/: main.yml
api_pedidos/: api.py  api_magalu.py  exceptions.py  schemas.py
tests/: test_api.py
