[tool.poetry]
name = "luizalabs"
version = "0.1.0"
description = "Tutorial da luizalabs apresentado na python brasil 2021"
authors = ["Pedro Nunes <pedrounes@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.0"
httpx = "^0.20.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
httpie = "^2.6.0"
pytest = "^6.2.5"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
